vlib/v/checker/tests/mismatch_bool_assign_err.out
vlib/v/checker/tests/mismatch_bool_assign_err.vv:2:1: error: operator ||= not defined on left operand type `int`
    1 | mut b := 12
    2 | b ||= 34
      | ^
    3 | println(b)
    4 |
vlib/v/checker/tests/mismatch_bool_assign_err.vv:6:1: error: operator &&= not defined on left operand type `string`
    4 | 
    5 | mut c := 'str'
    6 | c &&= 's'
      | ^
    7 | println(c)
