vlib/v/checker/tests/mismatch_bool_assign_err.vv
mut b := 12
b ||= 34
println(b)

mut c := 'str'
c &&= 's'
println(c)
